--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1456,7 +1456,13 @@
 						<div class="tab-pane fade show active" id="nav-last-1" role="tabpanel" aria-labelledby="all-tab">
 							<div class="post-list mt-small-1">
 								<div class="post-preview post-preview_video post-preview_video-big">
-									<div id="ytplayer" class="post-preview__videos ytplayer"></div>
+									<!-- Youtube player	-->
+									<iframe class="post-preview__videos" frameborder="0"
+													allow="accelerometer; autoplay; clipboard-write;"
+													data-async-frame
+													data-src="https://www.youtube.com/embed/5qap5aO4i9A?autoplay=1&controls=0&origin=https://dmitrisi4.github.io"
+													data-preview-src="https://a.espncdn.com/photo/2020/1024/official_mma_power_rankings_v1_1296x729.jpg">
+									</iframe>
 									<div class="post-preview__main">
 										<div class="post-preview__header">
 											<!--				text-mma-icon-label							-->
@@ -1624,10 +1630,13 @@
 						<div class="tab-pane fade" id="nav-popular-1" role="tabpanel" aria-labelledby="mma-tab">
 														<div class="post-list mt-small-1">
 															<div class="post-preview post-preview_video post-preview_video-big">
-																<iframe class="post-preview__videos" src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A"
-																				frameborder="0"
-																				allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-																				allowfullscreen></iframe>
+																<!-- Youtube player	-->
+																<iframe class="post-preview__videos" frameborder="0"
+																				allow="accelerometer; autoplay; clipboard-write;"
+																				data-async-frame
+																				data-src="https://www.youtube.com/embed/5qap5aO4i9A?autoplay=1&controls=0&origin=https://dmitrisi4.github.io"
+																				data-preview-src="https://a.espncdn.com/photo/2020/1024/official_mma_power_rankings_v1_1296x729.jpg">
+																</iframe>
 																<div class="post-preview__main">
 																	<div class="post-preview__header">
 																		<!--						text-box-icon-label					-->
@@ -1657,10 +1666,13 @@
 																</div>
 															</div>
 															<div class="post-preview post-preview_video post-preview_video-big">
-																<iframe class="post-preview__videos" src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A"
-																				frameborder="0"
-																				allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-																				allowfullscreen></iframe>
+																<!-- Youtube player	-->
+																<iframe class="post-preview__videos" frameborder="0"
+																				allow="accelerometer; autoplay; clipboard-write;"
+																				data-async-frame
+																				data-src="https://www.youtube.com/embed/5qap5aO4i9A?autoplay=1&controls=0&origin=https://dmitrisi4.github.io"
+																				data-preview-src="https://a.espncdn.com/photo/2020/1024/official_mma_power_rankings_v1_1296x729.jpg">
+																</iframe>
 																<div class="post-preview__main">
 																	<div class="post-preview__header">
 																		<!--						text-mma-icon-label					-->
